# advent_2024

./: .gitignore  Cargo.toml
day1/: Cargo.toml
day1/src/: lib.rs
day10/: Cargo.toml
day10/src/: lib.rs
day11/: Cargo.toml
day11/src/: lib.rs
day12/: Cargo.toml
day12/src/: lib.rs
day13/: Cargo.toml
day13/src/: lib.rs  main.rs
day14/: Cargo.toml
day14/src/: lib.rs  main.rs
day15/: Cargo.toml
day15/src/: lib.rs  main.rs
day16/: Cargo.toml
day16/src/: lib.rs  main.rs
day17/: Cargo.toml
day17/src/: lib.rs  main.rs
day18/: Cargo.toml
day18/src/: lib.rs  main.rs
day19/: Cargo.toml
day19/src/: lib.rs  main.rs
day2/: Cargo.toml
day2/src/: lib.rs
day20/: Cargo.toml
day20/src/: lib.rs  main.rs
day21/: Cargo.toml
day21/src/: lib.rs  main.rs
day22/: Cargo.toml
day22/src/: lib.rs  main.rs
day23/: Cargo.toml
day23/src/: lib.rs  main.rs
day24/: Cargo.toml
day24/src/: lib.rs  main.rs
day25/: Cargo.toml
day25/src/: lib.rs  main.rs
day3/: Cargo.toml
day3/src/: lib.rs
day4/: Cargo.toml
day4/src/: lib.rs
day5/: Cargo.toml
day5/src/: lib.rs
day6/: Cargo.toml
day6/src/: lib.rs
day7/: Cargo.toml
day7/src/: lib.rs
day8/: Cargo.toml
day8/src/: lib.rs
day9/: Cargo.toml
day9/src/: lib.rs
template/: Cargo.toml
utils/: Cargo.toml
utils/src/: direction.rs  fixedgrid.rs  graph.rs  grid.rs  lib.rs  picture.rs  point.rs  region.rs  runner.rs  sparsegrid.rs
utils/src/grid/: densegrid.rs  fixedgrid.rs  mod.rs  picture.rs
