[workspace]
resolver = "2"
members = [
    "utils",
    "template",
    "xtask", "day1", "day2", "day3", "day4", "day5", "day6", "day7", "day8", "day9", "day10", "day11", "day12", "day13", "day14", "day15", "day16", "day17", "day18", "day19", "day20", "day21", "day22", "day23", "day24", "day25"]

[workspace.dependencies]
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0"
# A dead simple ANSI terminal color painting library.
yansi = "1.0.0-gamma"
itertools = "0.13"
# An implementation of regular expressions for Rust. This implementation uses finite automata …
regex = "1.10"
# Pathfinding, flow, and graph algorithms
pathfinding = "4.12"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
lazy_static = "1.4"

strum = "0.27.0"                    # Helpful macros for working with enums and strings
strum_macros = "0.27.0"             # Helpful macros for working with enums and strings
array2d = "0.3"
nom = "7.1.3"                       # A byte-oriented, zero-copy, parser combinators library
z3 = "0.12.1"
memoize = "0.4.2"          # Attribute macro for auto-memoizing functions with somewhat-simple signatures

[profile.release]
debug = true
